2.83 beta, Some sculpt brush default preferences don't match the "Reset Brush" preferences. #74307

Closed
opened 2020-02-28 22:58:01 +01:00 by Rodger Davis · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 5500 Intel 4.4.0 - Build 20.19.15.5070

Blender Version
Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-28 16:45, hash: 85f980c517
Worked: (optional)

Short description of error
Some of the original brush preferences do not match the "reset brush" preferences. Same case when using a factory reset file.
Thumb and Cloth brushes were the only ones I noticed that were different. Cloth was only slightly different.

Here is a quick video using the Thumb Brush. First I tried it in a new file.. Then in a factory reset file.
Tablet settings are at the beginning and middle of the video.

ClayThumb Prefs.mp4


PS: Been loving the brushes! Have a nice day

Exact steps for others to reproduce the error

  • New sculpting template file
  • Select Clay Thumb tool
  • Open side panel and select tool tab
  • Reset brush

Values will change, without any change done by user.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) HD Graphics 5500 Intel 4.4.0 - Build 20.19.15.5070 **Blender Version** Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-28 16:45, hash: `85f980c517` Worked: (optional) **Short description of error** Some of the original brush preferences do not match the "reset brush" preferences. Same case when using a factory reset file. Thumb and Cloth brushes were the only ones I noticed that were different. Cloth was only slightly different. Here is a quick video using the Thumb Brush. First I tried it in a new file.. Then in a factory reset file. Tablet settings are at the beginning and middle of the video. [ClayThumb Prefs.mp4](https://archive.blender.org/developer/F8379027/ClayThumb_Prefs.mp4) --- PS: Been loving the brushes! Have a nice day **Exact steps for others to reproduce the error** - New sculpting template file - Select Clay Thumb tool - Open side panel and select tool tab - Reset brush Values will change, without any change done by user.
Author

Added subscriber: @RodDavis

Added subscriber: @RodDavis
Rodger Davis changed title from 2.83 beta, Some brush preferences don't match the "Reset Brush" preferences. to 2.83 beta, Some sculpt brush preferences don't match the "Reset Brush" preferences. 2020-02-28 22:59:50 +01:00
Richard Antalik changed title from 2.83 beta, Some sculpt brush preferences don't match the "Reset Brush" preferences. to 2.83 beta, Some sculpt brush default preferences don't match the "Reset Brush" preferences. 2020-02-29 02:45:19 +01:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Would hardly consider this to be bug, but this was probably overlooked.

Would hardly consider this to be bug, but this was probably overlooked.
Author

Thank you for the changes. Sorry that the descriptions wasn't as clear it should have been.

Thank you for the changes. Sorry that the descriptions wasn't as clear it should have been.

This issue was referenced by 233158b555

This issue was referenced by 233158b555156f89cd39d8ea0d42dd24d10956c7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-03-01 19:38:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74307
No description provided.